# GIF-7104

./: .gitignore  README.md
tp1/: premiers.cpp
tp2/: CMakeLists.txt  Chrono.hpp  tp2.cpp
tp2/src/: Parallele.cpp  Sequentiel.cpp  Shared.cpp
tp3/: CMakeLists.txt  main.cpp  my-hostfile
tp4/openacc/: tp2.cpp
tp4/openacc/old/: CMakeLists.txt
tp4/openacc/old/lib/: Chrono.hpp
tp4/openacc/old/src/: Parallele.cpp
tp4/openacc/src/: Sequentiel.cpp
tp4/opencl/: CMakeLists.txt  tp2.cpp
tp4/opencl/src/: Parallele.cpp  Shared.cpp  mykernel.cl
tp5/: CMakeLists.txt  Readme.md  main.cpp
tp5 copy/: main.cpp  makefile
tp5 copy/src/: Parallele.cpp  Sequentiel.cpp  Shared.cpp
tp5/lib/: bitmap_gen.hpp
tp5/src/: Parallele.cpp  Sequentiel.cpp  Shared.cpp
tp5/src/input/: init10.txt  init100.txt  init5.txt
